crates/core/tests/ui/proc/fn/forbidden_fn.rs
use interoptopus::ffi;

#[ffi]
fn new() {}

fn main() {}
